app/static/css/gallery.css
.gallery-image {
    max-height: 512px;
    max-width: 512px;
    width: 100%;
}

.text-shadow {
    text-shadow:
        -1px -1px 0 #000,
        1px -1px 0 #000,
        -1px 1px 0 #000,
        1px 1px 0 #000;
}

.text-stroke {
    stroke: black;
    stroke-width: 20px;
}

.dt-processing {
    position: absolute !important;
    top: 100% !important;
}

.gallery-outer {
    position: relative;
    background-color: #495057;
    background-size: 25px 25px;
    background-image:
        linear-gradient(45deg, rgb(145 145 145) 25%, transparent 25%),
        linear-gradient(135deg, rgb(145 145 145) 25%, transparent 25%),
        linear-gradient(45deg, transparent 75%, rgb(145 145 145) 75%),
        linear-gradient(135deg, transparent 75%, rgb(145 145 145) 75%);
}

.image-labels {
    position: absolute;
    bottom: 4px;
    left: 6px;
    pointer-events: none;
}

.image-icons {
    position: absolute;
    bottom: 20px;
    right: 4px;
    pointer-events: none;
}

.gallery-inner {
    position: relative;
    overflow: hidden;
}

.gallery-inner .img-skeleton {
    position: absolute;
    inset: 0;
    border-radius: 2px;
    pointer-events: none;
}

.gallery-inner .img-error-placeholder {
    position: absolute;
    inset: 0;
    pointer-events: none;
}

.gallery-inner .img-error-placeholder i {
    font-size: 6rem;
}

.gallery-ctx {
    position: absolute;
    top: 0;
    right: 25px;
}

.gallery-ctx-toggle {
    background-color: transparent;
    border: none;
    width: 20px;
    text-align: center;
}

.gallery-checkbox {
    position: absolute;
    top: 8px;
    left: 12px;
}

input[type='checkbox'] {
    transform: scale(1.5);
}

/* I hate that we have to do this, but datatables has no option to not
highlight a row and it fucks up our other stylings */
.dt-select-no-highlight {
    background-color: transparent !important;
    color: inherit !important;

    --dt-row-selected: initial;
    --dt-row-selected-text: initial;
    --dt-row-selected-link: initial;
    --dt-row-stripe: initial;
    --dt-row-hover: initial;
    --dt-column-ordering: initial;
    --dt-html-background: initial;
}

div.dataTables_wrapper span.select-info,
div.dataTables_wrapper span.select-item {
    margin-left: 0.25em;
}

#files-table td {
    max-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#files-table .dj-file-link {
    display: flex;
    align-items: center;
    min-width: 0;
}

#files-table .dj-file-link-ref {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    min-width: 0;
}

#files-table thead th:first-child {
    vertical-align: middle;
}

#files-table thead th:first-child input[type='checkbox'] {
    position: relative;
    top: -2px;
}

[id='files-table_wrapper'] .dt-layout-end {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    flex-wrap: nowrap;
}

#dt-user-select-wrapper select {
    width: auto;
}

